<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".fragments.SelectionModeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_btn"
        android:layout_width="@dimen/_19sdp"
        android:layout_height="@dimen/_16sdp"
        android:background="@drawable/back_btn"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn" />


    <TextView
        android:id="@+id/selection_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_14sdp"
        android:text="Select the drawing mode"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/appName" />


    <LinearLayout
        android:id="@+id/draw_with_camera_selection_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selection_card_border"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/draw_with_screen_selection_btn"
        app:layout_constraintTop_toBottomOf="@+id/selection_txt"
        tools:layout_editor_absoluteX="13dp">

        <!-- Top image with tick icon overlaid -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageMode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:scaleType="fitXY"
                android:src="@drawable/draw_with_camera_img" />

            <!-- Top-right check icon -->
            <ImageView
                android:id="@+id/imageTick"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="top|end"
                android:layout_margin="8dp"
                android:src="@drawable/selected_mode_tick"
                android:visibility="gone" />
        </FrameLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/draw_with_camera"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:layout_marginBottom="8dp"
            android:text="@string/draw_with_camera_description"
            android:textColor="@color/drawwithTextDecColor"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/draw_with_screen_selection_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintTop_toBottomOf="@+id/draw_with_camera_selection_btn"
        tools:layout_editor_absoluteX="13dp">

        <!-- Top image with tick icon overlaid -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageMode2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:scaleType="fitXY"
                android:src="@drawable/draw_with_screen_img" />

            <!-- Top-right check icon -->
            <ImageView
                android:id="@+id/imageTick2"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="top|end"
                android:layout_margin="8dp"
                android:src="@drawable/selected_mode_tick"
                android:visibility="gone" />
        </FrameLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/textTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/draw_with_screen"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/textDescription2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:layout_marginBottom="8dp"
            android:text="@string/draw_with_screen_description"
            android:textColor="@color/drawwithTextDecColor"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/selected_guiddialog_bg"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>