<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:padding="@dimen/_10sdp"

    tools:context=".fragments.HomeFragment">

    <!-- Top UI: Header & Buttons -->
    <ImageView
        android:id="@+id/more_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/more_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_bold"
        android:text="@string/sketch_box"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="@id/more_drawer"
        app:layout_constraintEnd_toStartOf="@+id/billing_image"
        app:layout_constraintStart_toEndOf="@+id/more_drawer"
        app:layout_constraintTop_toTopOf="@id/more_drawer" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/billing_image"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/gif"
        app:layout_constraintBottom_toBottomOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Quick Start Layout -->
    <FrameLayout
        android:id="@+id/quick_start_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_74sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/quick_start_btn_bg"
        app:layout_constraintEnd_toEndOf="@+id/billing_image"
        app:layout_constraintStart_toStartOf="@+id/more_drawer"
        app:layout_constraintTop_toBottomOf="@id/appName">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quick_start_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/_14sdp"
            android:background="@drawable/quick_start_btn"
            android:fontFamily="@font/sfpro_regular"
            android:paddingEnd="@dimen/_15sdp"

            android:text="@string/quick_start"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </FrameLayout>


    <!-- Create Own Text -->
    <TextView
        android:id="@+id/createowntxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/sfpro_bold"
        android:text="@string/create_your_own"
        android:textColor="@color/black"

        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="@id/quick_start_layout"
        app:layout_constraintTop_toBottomOf="@id/quick_start_layout" />


    <FrameLayout
        android:id="@+id/ads_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ads_container"
        app:layout_constraintTop_toBottomOf="@id/createowntxt"></FrameLayout>

    <!-- Camera Button -->
    <LinearLayout
        android:id="@+id/camera_btn_layout"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/rounded_main_btn"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/gallerylinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ads_container">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/camera_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"

            />
    </LinearLayout>

    <!-- Gallery Button -->
    <LinearLayout
        android:id="@+id/gallerylinearLayout"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/rounded_main_btn"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/camera_btn_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera_btn_layout"
        app:layout_constraintTop_toTopOf="@id/camera_btn_layout">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/gallery_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"


            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_btn_layout">

        <TextView
            android:id="@+id/sketch_gallery_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/sketch_gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <FrameLayout
            android:id="@+id/view_now_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/view_now_btn_bg">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/view_now_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/quick_start_btn"
                android:fontFamily="@font/sfpro_regular"
                android:text="@string/view_now"

                android:textAllCaps="false"
                android:textColor="@color/white" />
        </FrameLayout>

        <TextView
            android:id="@+id/categorie_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/categories"
            android:textColor="@color/black"

            android:textSize="@dimen/_18ssp"

            />


        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <!-- Outer ProgressBar -->
            <ProgressBar
                android:id="@+id/outerProgressBar"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/buttonBackground"
                android:indeterminateTintMode="src_in" />

            <!-- Inner ProgressBar -->
            <ProgressBar
                android:id="@+id/innerProgressBar"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:indeterminateTint="#FF6B26F5"
                android:indeterminateTintMode="src_in"

                android:padding="@dimen/_3sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/CategerySectionRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
